still trying to fix word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -47,7 +47,7 @@ pre {
 	background-color: transparent;
 	border-color: transparent;
 	padding: 0;
-	word-break: keep-all !important;
+	word-break: normal;
 	white-space: pre-wrap;
 }
 
